--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "common-tags": "^1.8.2",
-    "guilded.ts": "^13.6.0",
+    "guilded.ts": "0.9.0",
+    "discord.js": "13.8.1",
     "docdash": "^1.2.0",
     "emoji-regex": "^10.0.0",
     "is-promise": "^4.0.0",
